# sproutai_exercise

./: .env.template  README.md  diagram.puml  init_db.py  pyproject.toml  schema.sql
api/: app.py  config.py
tests/: test_posts.py  test_sprout_ai.py
